# certior

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  LICENSE  MANIFEST.in  OPERATIONS.md  README-PYPI.md  README.md  SECURITY.md  certior.code-workspace  docker-compose.production.host-env.example.yml  docker-compose.yml  pyproject.toml  requirements-frozen.txt  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dafny-ci.yml  dafny-regression-ci.yml  integration-test-ci.yml  lean-binary-ci.yml  lean-binary-release.yml  lean4-ci.yml  python-ci.yml
agentsafe/: __init__.py  runtime_policy.py
agentsafe/agents/: __init__.py  actions.py  agentic_executor.py  agentic_orchestrator.py  base.py  executor.py  orchestrator.py  planner.py  state.py  verifier_agent.py
agentsafe/capabilities/: __init__.py  capability_attenuation_verified.py  tokens.py
agentsafe/cloud/: __init__.py  event_bus.py  executor_service.py  postgres_backend.py  redis_backend.py  sqlite_backend.py  state_store.py  task_queue.py  webhook.py  websocket.py  workflow_store.py
agentsafe/compliance/: __init__.py  exporter.py  pdf_exporter.py  permission_resolver.py  presets.py  profiles.py  runtime_policy.py
agentsafe/flow/: __init__.py  ifc_enforcer.py  information_flow.py
agentsafe/kernel/: __init__.py  certificate.py
agentsafe/llm/: __init__.py  client.py  config.py  factory.py  openai_client.py
agentsafe/observability/: __init__.py  otel.py
agentsafe/safety/: __init__.py  approval_gate.py  scanner.py  taxonomy.py  tool_io_scanner.py
agentsafe/sandbox/: __init__.py  errors.py  executor.py  filesystem.py  fs_monitor.py  gvisor.py  hooks.py  integration.py  namespace.py  net_fetch.py  net_namespace.py  network.py  overlay.py  policy.py  rlimits.py  seccomp.py  seccomp_dafny_bridge.py  seccomp_deploy.py  (+2 more)
app/: __init__.py  main.py  worker.py
certior/: __init__.py  _lean_binary_manifest.py  _lean_fingerprint.py  guard.py  lean_installer.py
demo/: integration_demo.py  production_usecase.py
docker/: integration-test.Dockerfile  integration-test.Dockerfile.dockerignore  integration-test.compose.yml  prometheus.yml
docs/: INTEGRATIONS.md  README.md  api-contract.md  bring-your-own-framework.md  certior-trust-package.md  docs.json  introduction.mdx  lean-binary.md  openclaw-defenses.md  openclaw-skill-audit.md  quickstart.md
examples/: 01_health_check.py  02_verified_task.py  03_hipaa_compliance.py  04_z3_verification.py  05_websocket_stream.py  06_protected_release_workflow.py  07_multi_agent_reviewed_release.py  08_all_provers_showcase.py  09_agent_framework_adapter.py  10_openclaw_pipeline_demo.py  README.md  _helpers.py  openai_agent_demo.py  seed_glass_box_demo.py  wrapper_quickstart.py
lean4/: README.md
notebooks/: quickstart.ipynb
scripts/: bootstrap-production.sh  build-extension.sh  build-lean-binary.sh  build-lean.sh  build_demo_gif.py  certior-doctor.sh  check_lean_sorry.py  dap-smoke-test.py  generate-runtime-evidence.sh  install-lean-toolchain.sh  prepare-lean-release.py  strip_dafny_test_methods.py  update-lean-fingerprint.py  validate_verification_graph.py
skills/: skill-verification.schema.json
tests/: conftest.py  test_a8_approval_gate.py  test_a9_constraint_loading.py  test_api_contract_releases.py  test_api_releases.py  test_core.py  test_coverage_gaps.py  test_d1_integration.py  test_d1_sandbox.py  test_d2_filesystem.py  test_d2_production.py  test_d3_production.py  test_d4_deploy_production.py  test_d4_production.py  test_d5_gvisor.py  test_dafny_b1_capability_attenuation.py  test_dafny_b2_certificates.py  test_dafny_b3_information_flow.py  test_dafny_b4_url_filter.py  test_dafny_b5_path_safety.py  test_dafny_d4_seccomp_filter.py  test_hardening_a1_a3.py  test_hardening_a6_a7.py  test_integration_bridge.py  test_integration_full.py  test_integrations.py  test_lean_bridge.py  test_lean_c1_lattice.py  test_lean_c2_composition.py  test_lean_c3_delegation.py  test_lean_c4_encoding.py  test_lean_installer.py  test_lean_live_verifier.py  test_multi_provider.py  test_openai_adapter.py  test_public_api.py  test_routes_registered.py  test_z3_optimizer.py
(+304 files in other folders)
